<resources>
    <string name="facebook_app_id">1376274882826132</string>
    <string name="fb_login_protocol_scheme">fb1376274882826132</string>
    <string name="default_notification_channel_id">notification_channel</string>
    <string name="app_name">Salaka Farm</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">\u0020\u0020\u0020\u0020\u0020\u0020Password</string>
    <string name="address">Address</string>
    <string name="register">Registration</string>
    <string name="terms_conditions">I have read and agree to the <font color='#23a1d1' size="13">Terms &amp; Conditions</font></string>
    <string name="privacy_policy">I have read and agree to the<font color='#23a1d1' size="13">\u0020 Privacy Policy</font></string>
    <string name="use_other_methods">Use Other Methods</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_is_resent_in_10_sec">OTP is resent in 10 sec</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="address_3">Address 3</string>
    <string name="contact">Contact</string>
    <string name="imagecontent">ImageContent</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="network_failure">Network Failure</string>
    <string name="conversion_error">Conversion Error</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="payment_status">Payment Status:</string>
    <string name="order_status">Order Status</string>
    <string name="shipping_status">Shipping Status </string>
    <string name="order_at">Order At </string>
    <string name="telephone_n9808608666"><font color='black' size="16">Telephone</font>\n\n<font color='blue' size="16">9801234567</font></string>
    <string name="opening_times_n7_am_8_pm"><font color='black' size="16">Opening Times</font>\n7 Am - 8 Pm</string>
    <string name="company_name">Salaka Organic and Traning Center</string>
    <string name="language_change"><font color='#5FA95F'>Language Change</font></string>
    <string name="search_here">Search Here</string>
    <string name="popular_products">Popular Products</string>
    <string name="messages">Messages</string>
    <string name="cart"> Cart</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="branches">Branches</string>
    <string name="my_comparison_list">My Comparison List</string>
    <string name="contact_us">Contact Us</string>
    <string name="policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="kathmandu_nepal">Kathmandu, Nepal</string>
    <string name="rs">Rs.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="todo">Todo</string>
    <string name="related_products">Related Products</string>
    <string name="add_to_wishlist">Successfully added to Wishlist</string>
    <string name="view_cart">View Cart</string>
    <string name="add">Add</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="user_profile">User Profile</string>
    <string name="compare_list_empty">Compare List is empty</string>
    <string name="total_cost">Total Cost :-</string>
    <string name="selected_branch">Selected Branch</string>
    <string name="main_branch">Main Branch</string>
    <string name="shipped">Shipped</string>
    <string name="processed">Processed</string>
    <string name="processing">Processing</string>
    <string name="pending">Pending</string>
    <string name="complete">Complete</string>
    <string name="track_your_order">Track Order</string>
    <string name="deliver_to">Deliver To :</string>
    <string name="by_bank_account">By Bank Account</string>
    <string name="by_qr">By QR</string>
    <string name="address_details">Address Details</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="wishlist">WishList</string>
    <string name="compare_list">Compare List</string>
    <string name="cart_list">Cart List</string>
    <string name="cancel">Cancel</string>
    <string name="complete_status">Completed</string>
    <string name="failed_status">Failed</string>
    <string name="new_status">New</string>
    <string name="processing_status">Processing</string>
    <string name="delivery_on_its_way">Your Delivery is own its way...</string>
    <string name="contact_employee">Contact Employee :-</string>
    <string name="there_is_no_order_in_the_basket">There is no order in the basket</string>
    <string name="continue_button">Continue</string>
    <string name="sn">Sn.</string>
    <string name="product_id">Product Id</string>
      <string name="previous">Previous</string>
    <string name="view_wishlist">View WishList</string>
    <string name="search">Search</string>
    <string name="just_for_you">Just For You</string>
    <string name="delete">Delete</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps_fragment">MapsFragment</string>
   <string name="my_compare_list">My Compare List</string>
    <string name="in_stock">In Stock</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="brand">Brand</string>
    <string name="availability">Availability</string>
    <string name="shopping_cart">Your Shopping Cart</string>
    <string name="select_subscription_item">Select Subscription Item</string>
    <string name="partner_branch">Partner Branch</string>
    <string name="add_address">Add Address</string>
    <string name="litre">Litre</string>
    <string name="subscription_schedule_and_quantity">Subscription Schedule and Quantity</string>
    <string name="evening_shift">Evening Shift</string>
    <string name="discount">Discount</string>
    <string name="morning_shift">Morning Shift</string>
    <string name="both_shift">Both Shift</string>
      <string name="by_esewa">By ESewa</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="hold_status">Hold</string>
    <string name="cancelled_status">Cancelled</string>
     <string name="order_history">Order History</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
     <string name="total">Total</string>
    <string name="created_at">Created At</string>
    <string name="salaka_s_videos">Salaka\'s Videos</string>
    <string name="additional_setting">Additional Setting</string>
    <string name="customer_setting">Customer Setting</string>
    <string name="other_queries">Other Queries</string>
    <string name="proceed">Proceed</string>
    <string name="track_your_subscription">Track your subscription</string>
    <string name="employee_s_details">Employee\'s Details</string>
    <string name="employee_image">Employee Image:-</string>
    <string name="employee_name">Employee Name:-</string>
    <string name="contact_no">Contact No.:</string>
    <string name="gender">Gender:</string>
    <string name="employee_s_email">Employee\'s Email :</string>
    <string name="subscription_started">Subscription Started</string>
    <string name="subscription_expires_at">Subscription Expires at</string>
    <string name="view_history">View History</string>
    <string name="delete_subscription">Unsubscribe</string>
    <string name="customer_name">Customer Name:-</string>
    <string name="package_name">Package Name :</string>
    <string name="total_subscribed">Total Subscribed :</string>
    <string name="delivery_time">Delivery Time :</string>
    <string name="litre_per_day">Litre per day :</string>
    <string name="delivered_by">Delivered By :</string>
    <string name="delivered_to">Delivered To:</string>
    <string name="payment_by">Payment By:</string>
    <string name="subscription_details">Subscription Details</string>
    <string name="alter_subscription">Alter Subscription</string>
    <string name="deduct_subscription">Deduct Subscription</string>
    <string name="cancel_today_s_subscription">Cancel Today\'s Subscription</string>
    <string name="add_additional_subscription">Add additional Subscription</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="cancel_sub_content">Do you want to cancel your subscription?</string>
    <string name="unsubscribe_cancel_title"> Subscription</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="our_videoes">Our Videos</string>
    <string name="our_gallery">Our Gallery</string>
    <string name="old_password"><font color='#5FA95F' size="10">Old password</font></string>
    <string name="confirm_password"><font color='#5FA95F' size="10">Confirm Password</font></string>
    <string name="new_password"><font color='#5FA95F' size="10">New Password</font></string>
    <string name="add_to_compare">Add to Compare List</string>
    <string name="your_wishlist">Your WishList</string>
    <string name="your_order_details">Your Order Details</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="request_password_change">Request Password Change</string>
    <string name="proceed_with_subscription">Proceed With Subscription</string>
    <string name="payment_method">Payment Method</string>
    <string name="earliest_delivery_by_1_hour">Earliest Delivery by 1 hour</string>
    <string name="change">Change</string>
    <string name="subscriber_details">Subscriber Details</string>
    <string name="total_cost_with_discount">Total Cost with Discount :-</string>
    <string name="selected_package">Selected Package</string>
    <string name="select_package">Select Package</string>
    <string name="quantity">Quantity</string>
    <string name="choose_starting_date">Choose Starting Date</string>
    <string name="period">Period</string>
    <string name="add_subscription_plan_header">Add Your Subscription Plan</string>
    <string name="please_select_delivery_shift">Please select delivery shift</string>
    <string name="please_payment_method">Please select payment method</string>
    <string name="please_select_branch">Please select Branch</string>
    <string name="payment_details">Payment Details</string>
    <string name="total_quantity">Total Quantity :</string>
    <string name="overall_cost">Overall Cost :</string>
    <string name="pay_with_esewa">Pay With ESEWA</string>
    <string name="proceed_with_payment">Proceed with Payment</string>
    <string name="scan_qr_to_pay_for_your_subscription">Scan QR to Pay for your subscription</string>
    <string name="continue_btn">Continue</string>
    <string name="proceed_with_checkout">Proceed With Checkout</string>
</resources>