<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".views.login.LoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="269dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <EditText
                android:id="@+id/et_first_name"
                style="@style/modifiedEditText"
                android:layout_alignStart="@+id/first_name_img"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:hint="@string/first_name"
                android:text="Sadikshya"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/first_name_img"
                style="@style/editLeftIcon"
android:layout_marginStart="@dimen/_30sdp"
                android:contentDescription="@string/email"
                android:src="@drawable/username" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="269dp"
            app:layout_constraintTop_toBottomOf="@+id/first_name">

            <EditText
                android:id="@+id/et_last_name"
                style="@style/modifiedEditText"
                android:layout_alignStart="@+id/last_name_img"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:hint="@string/last_name"
                android:text="Mishra"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/last_name_img"
                style="@style/editLeftIcon"
                android:contentDescription="@string/last_name"
                android:src="@drawable/email_add" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="269dp"
            app:layout_constraintTop_toBottomOf="@+id/last_name">

            <EditText
                android:id="@+id/et_email_address"
                style="@style/modifiedEditText"
                android:layout_alignStart="@+id/email_img"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:hint="@string/email"
                android:text="sadikshyamishra@gmail.com"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/email_img"
                style="@style/editLeftIcon"
                android:contentDescription="@string/email"
                android:src="@drawable/email_add" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputConfirmPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_15sdp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/et_password"
                    style="@style/modifiedEditText"
                    android:layout_alignStart="@+id/address_second_img"
                    android:hint="@string/password"
                    android:gravity="center"
                    android:text="123123"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/password_img"
                style="@style/editLeftIcon"
                android:src="@drawable/password"
                android:contentDescription="@string/email" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/address_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="269dp"
            app:layout_constraintTop_toBottomOf="@+id/password">

            <EditText
                android:id="@+id/et_address_1"
                style="@style/modifiedEditText"
                android:layout_alignStart="@+id/address_first_img"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:hint="@string/address_1"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="Gothatar" />

            <ImageView
                android:id="@+id/address_first_img"
                style="@style/editLeftIcon"
                android:contentDescription="@string/address_1"
                android:src="@drawable/email_add" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/address_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_first">

            <EditText
                android:id="@+id/et_address_2"
                style="@style/modifiedEditText"
                android:layout_alignStart="@+id/address_second_img"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:hint="@string/address_2"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="Biratnagar" />

            <ImageView
                android:id="@+id/address_second_img"
                style="@style/editLeftIcon"
                android:src="@drawable/email_add"
                android:contentDescription="@string/address_2"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="269dp"
            app:layout_constraintTop_toBottomOf="@+id/address_second">

            <EditText
                android:id="@+id/contact_details"
                style="@style/modifiedEditText"
                android:layout_alignStart="@+id/addressEt"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:hint="@string/contact"
                android:inputType="textEmailAddress"
                android:text="9842554500"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/addressEt"
                style="@style/editLeftIcon"
                android:contentDescription="@string/address"
                android:src="@drawable/email_add" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/terms_conditions"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact">
            <CheckBox
                android:id="@+id/checkbox_termandcondition"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/termandconditionTv"
                android:textSize="13sp"
                android:textColor="@color/main_color"
                android:text="@string/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:id="@+id/sign_up"
            style="@style/loginButton"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/sign_in"
            android:gravity="center"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/white"
            android:onClick="onRegisterClick"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/terms_conditions"/>

        <LinearLayout
            android:id="@+id/other_methods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:weightSum="12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@color/main_color" />

            <TextView
                style="@style/viewParent.headerText.NoMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/use_other_methods"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="3"
                android:background="@color/main_color" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/other_methods">

            <ImageView
                android:id="@+id/fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagecontent"
                app:srcCompat="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/imagecontent"
                app:srcCompat="@drawable/ic_google_plus" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>