<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="330dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/sub_color"
    android:layout_gravity="center"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/sub_color"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/change_your_password"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:textColor="@color/sub_color"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="@dimen/_15sdp"
                android:layout_height="wrap_content" />
            <View
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/tab_indicator_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="@dimen/_2sdp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/old_password"
                        style="@style/modifiedEditText"
                        android:gravity="start"
                        android:layout_gravity="center"
                        android:hint="@string/old_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="@dimen/_2sdp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/new_password"
                        style="@style/modifiedEditText"
                        android:layout_alignStart="@+id/address_second_img"
                        android:gravity="start"
                        android:layout_gravity="center"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"
                    android:layout_marginTop="@dimen/_2sdp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/confirm_password"
                        style="@style/modifiedEditText"
                        android:layout_alignStart="@+id/address_second_img"
                        android:gravity="start"
                        android:layout_gravity="center"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/_20sdp"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/cancel"
                        style="@style/loginButton"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:text="@string/cancel" />
                    <Button
                        android:id="@+id/continuebtn"
                        style="@style/loginButton"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:text="Update" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>