<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/sub_color"
    android:layout_height="@dimen/_300sdp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="start"
        android:text="Add New Address"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/address_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/et_address_1"
            style="@style/modifiedEditText"
            android:layout_alignStart="@+id/address_first_img"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="19dp"
            android:gravity="center"
            android:hint="@string/address_1"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <ImageView
            android:id="@+id/address_first_img"
            style="@style/editLeftIcon"
            android:contentDescription="@string/address_1"
            android:src="@drawable/email" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/address_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_first">

        <EditText
            android:id="@+id/et_address_2"
            style="@style/modifiedEditText"
            android:layout_alignStart="@+id/address_second_img"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:hint="@string/address_2"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:text="Biratnagar" />

        <ImageView
            android:id="@+id/address_second_img"
            style="@style/editLeftIcon"
            android:src="@drawable/email"
            android:contentDescription="@string/address_2"/>
    </RelativeLayout>

    <Button
        android:id="@+id/sign_up"
        style="@style/loginButton"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_second"
        app:layout_constraintVertical_bias="0.112" />
</androidx.constraintlayout.widget.ConstraintLayout>